2006-10-22 Dom Lachowicz <domlachowicz@gmail.com>

	* Added Voikko spell checker backend (AbiWord bug 10450), for better
	Finnish support. Credit goes to Harri Pitknen and Anssi Hannula.
	
2006-07-22 Jose Da Silva <Digital@JoesCat.com>

	* doc/enchant.1: enchant.1 page more similar to other man/info pages
	(bug 10375)
	
2006-07-22 Dom Lachowicz <cinamod@hotmail.com>

	* src/*/Makefile.am: add '-module' to LDFLAGS so that things get
	built correctly on Mac OSX (bug 10398)
	* src/enchant.c: Fix C99-ism (bug 10387)
	* configure.in: Grab the value of `aspell config prefix` and
	use that if available (bug 10308)
	
2006-05-06 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number to indicate an unstable series
	* src/pwl.[ch]: New personal wordlist implementation, based on Trie.
	Thanks to Ryan Kelly <ryan-bugs@rfk.id.au> (bug 10212).
	* src/enchant.c: Ditto
	
2006-04-23 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: --with-aspell-prefix didn't work
	
2006-03-20 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: relocatable_library undefined command in configure;
	Bug 10134, from Pierre Joye <pierre.php@gmail.com>

	* configure.in: configure does not check if aspell/pspell headers exist;
	Bug 10135, based on a patch from Pierre Joye
	
2003-07-13 Dom Lachowicz <cinamod@hotmail.com>
	* Initial import