@@ -4,3 +4,4 @@ fi_FI:voikko,ispell,myspell,aspell
 he:hspell,myspell
 he_IL:hspell,myspell
 yi:uspell
+tr:zemberek
